[project]
name = "carl-agent-server"
version = "0.1.0"
description = "Serve CARL reasoning chains as HTTP agents (FastAPI) — per-agent Swagger, hub with hot-reload from gigaevo Memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["carl", "agent", "fastapi", "reasoning", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "httpx>=0.27",
    "mmar-carl>=0.3.0",
    "gigaevo-client>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/pyshka501/carl-agent-server"
Repository = "https://github.com/pyshka501/carl-agent-server"

[project.scripts]
carl-agent = "carl_agent_server.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carl_agent_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
